<resources>
    <string name="app_name">ATM</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="quit">Quit</string>
    <string name="remember_username">Remember Username</string>
    <string name="upload">Upload</string>
    <string name="txt_date">Date</string>
    <string name="txt_description">Description</string>
    <string name="txt_amount">Amount</string>
    <string name="btn_add">Add</string>
    <string name="btn_map">Map</string>
    <string name="title_activity_investment" translatable="false">investmentActivity</string>
    <string name="txt_news">Latest News</string>
    <string name="title_activity_maps">Map</string>
</resources>
